projects/vb6parse/snapshots/tests/library/string/ucase/ucase_switch.snap
---
source: projects/vb6parse/tests/library/string/ucase.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: Whitespace
              text: "    "
            - kind: AssignmentStatement
              children:
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: result
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: CallExpression
                  children:
                    - kind: Identifier
                      text: Switch
                    - kind: LeftParenthesis
                      text: (
                    - kind: ArgumentList
                      children:
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: UCase$
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: TypeKeyword
                                                  text: type
                                    - kind: RightParenthesis
                                      text: )
                                - kind: Whitespace
                                  text: " "
                                - kind: EqualityOperator
                                  text: "="
                                - kind: Whitespace
                                  text: " "
                                - kind: StringLiteralExpression
                                  children:
                                    - kind: StringLiteral
                                      text: "\"A\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "1"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: BinaryExpression
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: UCase$
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: TypeKeyword
                                                  text: type
                                    - kind: RightParenthesis
                                      text: )
                                - kind: Whitespace
                                  text: " "
                                - kind: EqualityOperator
                                  text: "="
                                - kind: Whitespace
                                  text: " "
                                - kind: StringLiteralExpression
                                  children:
                                    - kind: StringLiteral
                                      text: "\"B\""
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "2"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: BooleanLiteralExpression
                              children:
                                - kind: TrueKeyword
                                  text: "True"
                        - kind: Comma
                          text: ","
                        - kind: Whitespace
                          text: " "
                        - kind: Argument
                          children:
                            - kind: NumericLiteralExpression
                              children:
                                - kind: IntegerLiteral
                                  text: "0"
                    - kind: RightParenthesis
                      text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
